minikube-cluster-ops/hello-mini-k8s-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-mini-k8s-ingress
  namespace: sanity-check-hello-node 
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: hello-world.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-mini-k8s
                port:
                  number: 8080
